--- a/src/components/play-detail/PlayDetailInfo.scss
+++ b/src/components/play-detail/PlayDetailInfo.scss
@@ -1,75 +1,151 @@
-@media (min-width: 480px) {
+@media (min-width: 551px) {
   .play-detail-info {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
-  }
-
-  .play-detail-info > div {
-    margin-bottom: 30px;
-  }
-
-  // .play-time-info h3,
-  // .seat-info h3,
-  // .summary h3, .
-  .play-detail-info div h3 {
-    margin-bottom: 20px;
-    font-size: 22px;
-  }
-
-  .play-time-info p:nth-child(2) {
-    font-weight: 700;
-  }
-
-  .play-detail-info .summary {
-    margin-bottom: 50px;
-  }
-
-  .summary p {
-    line-height: 160%;
-  }
-
-  .crew-box {
-    display: flex;
-    border: 1.5px solid rgba(188, 188, 188, 0.5);
-    border-radius: 8px;
+    margin-top: 15px;
 
     div {
-      padding-left: 20px;
-      flex: 1;
+      margin-bottom: 30px;
+
+      h3 {
+        margin-bottom: 20px;
+        font-size: 22px;
+      }
     }
 
-    div:first-child,
-    div:nth-child(2) {
-      border-right: 1.5px solid rgba(188, 188, 188, 0.5);
+    .play-time-info p:nth-child(2) {
+      font-weight: 700;
     }
-  }
 
-  .crew-box li {
-    font-size: 22px;
-    margin: 10px 0 30px 0;
-    font-weight: 700;
-  }
+    .summary {
+      margin-bottom: 50px;
 
-  .crew-box p {
-    font-size: 16px;
-  }
+      p {
+        line-height: 160%;
+      }
+    }
 
-  .detail-poster h3 {
-    padding-top: 20px;
-  }
+    .crew-box {
+      display: flex;
+      border: 1.5px solid rgba(188, 188, 188, 0.5);
+      border-radius: 8px;
 
-  .detail-poster-img {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+      div {
+        padding: 0 20px;
+        flex: 1;
+        margin-bottom: 0;
+      }
 
-  .detail-poster-img img {
-    width: 1000px;
+      div:first-child,
+      div:nth-child(2) {
+        border-right: 1.5px solid rgba(188, 188, 188, 0.5);
+      }
+
+      li {
+        font-size: 22px;
+        margin: 10px 0 30px 0;
+        font-weight: 700;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
+
+    .detail-poster {
+      h3 {
+        padding-top: 20px;
+      }
+
+      .detail-poster-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 1000px;
+          width: 95%;
+        }
+      }
+    }
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 550px) {
+  .play-detail-info {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+
+    div {
+      margin-bottom: 30px;
+
+      h3 {
+        margin-bottom: 20px;
+      }
+    }
+
+    .play-time-info p:nth-child(2) {
+      font-weight: 700;
+    }
+
+    .summary {
+      margin-bottom: 50px;
+
+      p {
+        line-height: 160%;
+      }
+    }
+
+    .crew-box {
+      display: flex;
+      flex-direction: column;
+      border: 1.5px solid rgba(188, 188, 188, 0.5);
+      border-radius: 8px;
+
+      div {
+        padding: 0 20px;
+        flex: 1;
+        margin-bottom: 0;
+
+        li {
+          font-size: 18px;
+        }
+      }
+
+      div:first-child,
+      div:nth-child(2) {
+        border-bottom: 1.5px solid rgba(188, 188, 188, 0.5);
+      }
+
+      li {
+        font-size: 22px;
+        margin: 10px 0 30px 0;
+        font-weight: 700;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
+
+    .detail-poster {
+      h3 {
+        padding-top: 20px;
+      }
+
+      .detail-poster-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 1000px;
+          width: 95%;
+        }
+      }
+    }
+  }
 }
