--- a/src/components/play-detail/PlayDetailNav.scss
+++ b/src/components/play-detail/PlayDetailNav.scss
@@ -3,10 +3,10 @@
   border-bottom: 2px solid #ffb400;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 900px) {
   .play-detail-nav {
     display: flex;
-    margin-top: 150px;
+    margin-top: 100px;
   }
 
   .play-detail-nav div {
@@ -21,5 +21,40 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 551px) and (max-width: 899px) {
+  .play-detail-nav {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+  }
+
+  .play-detail-nav div {
+    font-size: 22px;
+    font-weight: 700;
+    padding: 0 10px 10px 10px;
+  }
+
+  .play-detail-nav div:hover {
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 550px) {
+  .play-detail-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+
+    div {
+      font-size: 22px;
+      font-weight: 700;
+      padding: 0 10px 5px 10px;
+      margin-bottom: 20px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
