--- a/src/components/play-detail/TheaterLocation.scss
+++ b/src/components/play-detail/TheaterLocation.scss
@@ -1,29 +1,12 @@
-@media (min-width: 480px) {
-  .kakao-map-container {
-    margin: 30px 0;
-  }
+.kakao-map-container {
+  margin: 30px 0;
 
-  .kakao-map-container h3 {
+  h3 {
     margin-bottom: 20px;
     font-size: 22px;
   }
 
-  .kakao-map-container .kakao-map {
-    width: 100%;
-    height: 400px;
-  }
-}
-
-@media (max-width: 480px) {
-  .kakao-map-container {
-    margin: 30px 0;
-  }
-
-  .kakao-map-container h3 {
-    margin-bottom: 20px;
-  }
-
-  .kakao-map-container .kakao-map {
+  .kakao-map {
     width: 100%;
     height: 400px;
   }
