--- a/src/components/user/SnsButtons.scss
+++ b/src/components/user/SnsButtons.scss
@@ -1,25 +1,36 @@
-.social-buttons {
+.socialButtons {
   max-width: 300px;
   margin: 30px auto 0px auto;
   box-sizing: border-box;
 
-  button {
-    width: 280px;
-    margin-bottom: 20px;
-    border: none;
-    cursor: pointer;
-    padding: 0;
+  .btnbox {
+    margin-bottom: 15px;
 
-
-    .btnimage {
-      display: block;
+    button {
       width: 280px;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+      
+  
+      .btnimage {
+        display: block;
+        width: 280px;
+      }
+      
     }
-    
+
   }
 
+  // 마지막 로그인 계정 표시 텍스트
+  .last-account {
+    display: none;
+    width: 250px;
+    margin: 0px auto;
+    font-size: 13px;
+    color: #ff3300;
+    text-align: right;
+  }
 
-
-  
 }
 
