--- a/src/pages/user/SignUp_In.scss
+++ b/src/pages/user/SignUp_In.scss
@@ -1,14 +1,16 @@
-.signup-in-container {
+.signupInContainer {
+  font-family: "Noto Sans KR";
   width: 100%;
   
-  .signup_title {
+  .signup-title {
+
     font-size: 50px;
     font-weight: 900;
     color: #FFB400;
     text-align: center;
   }
-  .signup_description {
-    font-weight: 700;
+  .signup-description {
+    font-weight: 500;
     margin-top: 20px;
     text-align: center;
   }
