2차프로젝트로 인한 중단

--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -21,6 +21,7 @@
     font-weight: 200;
   }
   .header-login-btn-box {
+    width: 120px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -30,6 +31,7 @@
   }
   .header-login-btn {
     margin: 0;
+    color: white;
   }
   .vertical-box2 {
     height: 125px;
@@ -111,6 +113,7 @@
   }
   .header-login-btn {
     margin: 0;
+    color: white;
   }
   .vertical-box2 {
     height: 125px;
