--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -22,9 +22,14 @@
 
     img {
       width: 100%;
-      // min-height: 200px;
+      min-height: 200px;
       max-height: 600px;
       object-fit: cover;
+
+      @media (max-width: 992px) {
+        min-height: 100px;
+        max-height: 60vw;
+      }
     }
 
     .post-content-box {
@@ -54,6 +59,11 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
+
+        @media (max-width: 992px) {
+          font-size: 20px;
+          padding-bottom: 4px;
+        }
       }
 
       .comments {
@@ -72,6 +82,9 @@
         display: flex;
         flex-wrap: wrap;
         max-height: 56px;
+        @media (max-width: 992px) {
+          max-height: 26px;
+        }
         overflow: hidden;
         margin-bottom: 6px;
 
@@ -96,6 +109,10 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
+
+        @media (max-width: 992px) {
+          -webkit-line-clamp: 1;
+        }
       }
     }
   }
