--- a/src/components/board/Comment.scss
+++ b/src/components/board/Comment.scss
@@ -31,4 +31,11 @@
       color: #bcbcbc;
     }
   }
+
+  .content {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
