--- a/src/components/board/PostForm.scss
+++ b/src/components/board/PostForm.scss
@@ -4,6 +4,10 @@
   padding: 30px;
 
   .form-header {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+
     .title {
       margin: 0;
       font-size: 20px;
@@ -20,10 +24,15 @@
     color: #d9d9d9;
   }
 
+  .flex {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .flex-box {
     margin-bottom: 30px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
   }
 
   .input {
@@ -37,6 +46,20 @@
     textarea {
       border: none;
       border-bottom: solid #d9d9d9 2px;
+    }
+
+    input[type="file"] {
+      border: none;
+      width: fit-content;
+      position: absolute;
+      width: 0;
+      height: 0;
+      padding: 0;
+      overflow: hidden;
+      border: 0;
+    }
+    input[type="file"]:focus {
+      border-bottom: solid 2px red;
     }
 
     textarea {
@@ -54,6 +77,13 @@
     :focus {
       outline: none;
       border-color: #898989;
+    }
+
+    #imageBtn {
+      border-width: 2px;
+      label {
+        width: fit-content;
+      }
     }
 
     img {
@@ -74,19 +104,22 @@
   }
 
   .form-footer {
+    display: flex;
+    justify-content: space-between;
     align-items: flex-end;
     margin-top: 30px;
     margin-bottom: 0;
 
     .notice {
       font-size: 11px;
-      color: #bcbcbc;
       font-weight: 400;
+      color: #1976d2;
     }
   }
 
   .tag-list {
     justify-content: flex-start;
+    flex-wrap: wrap;
     font-size: 14px;
 
     > * {
@@ -97,8 +130,33 @@
       height: 24px;
     }
 
-    span {
+    .tag-box {
       line-height: 22px;
+      text-wrap: wrap;
+    }
+
+    span {
+      width: max-content;
     }
   }
+
+  .title,
+  .image {
+    .error {
+      margin-left: 90px;
+    }
+  }
+
+  .error {
+    font-size: 12px;
+    color: rgb(255, 0, 0);
+    display: flex;
+    svg {
+      margin: 3px 2px 0 0;
+    }
+  }
+}
+
+.pre-wrap {
+  white-space: pre-wrap;
 }
