--- a/src/pages/play-list/PlayList.scss
+++ b/src/pages/play-list/PlayList.scss
@@ -36,6 +36,13 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
   }
+
+  .play-no-exsist {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+  }
 }
 
 /*(반응형) 핸드폰 사이즈에서 적용될 CSS*/
