fix: 연극 리스트 페이지 가격 관련 버그 수정, 오류 alert 창 띄우기

--- a/src/components/play-detail/PlayDetailTop.scss
+++ b/src/components/play-detail/PlayDetailTop.scss
@@ -40,11 +40,16 @@
           padding-left: 10px;
           display: flex;
           flex-wrap: wrap;
+
+          h3 {
+            margin: 0;
+          }
         }
 
         p {
           margin-left: 15px;
           font-size: 18px;
+          line-height: 1.2;
         }
 
         hr {
