Feat: 자유게시판 API 연결 - 리스트, 디테일

--- a/src/components/board-free/FreeBoardList.scss
+++ b/src/components/board-free/FreeBoardList.scss
@@ -24,6 +24,12 @@
         span {
           margin-left: 6px;
         }
+        .user-img {
+          width: 24px;
+          height: 24px;
+          border-radius: 50px;
+          object-fit: cover;
+        }
       }
     }
     .title {
