--- a/src/components/board/PostTop.scss
+++ b/src/components/board/PostTop.scss
@@ -1,6 +1,14 @@
 .board-post-top {
   display: flex;
 
+  .user-img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50px;
+    object-fit: cover;
+    margin-right: 2px;
+  }
+
   .flex-box {
     margin-left: 5px;
     flex-grow: 1;
