--- a/src/components/main/MainBanner.scss
+++ b/src/components/main/MainBanner.scss
@@ -1,16 +1,51 @@
-.swiper {
-  width: 100%;
-  background-color: #282828;
-  border-top: 1px solid black;
-  .swiper-button-prev,
-  .swiper-button-next {
-    color: #797979;
+.banner-img-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  width: 1110px;
+  height: 100%;
+}
+@keyframes tilt {
+  0%, 100% {
+    transform: rotate(0deg);
   }
-  .swiper-pagination-bullet-active {
-    background-color: #797979;
+  40% {
+    transform: rotate(1deg);
   }
 }
+
 .banner-img {
-  width: 100%;
-  height: 100%;
+  rotate: 2deg;
+  width: 240px;
+  padding-top: 4px;
+  animation: tilt 1.06s ease; /* 애니메이션 적용 */
+}
+@keyframes letterSpacingAnimation {
+  from {
+    letter-spacing: 2.5px;
+  }
+  to {
+    letter-spacing: 3px;
+  }
+}
+@keyframes gapAnimation {
+  from {
+    gap: 8px;
+  }
+  to {
+    gap: 8px;
+  }
+}
+.banner-text-box {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  animation: letterSpacingAnimation 1s ease, gapAnimation 1s ease;
+  font-size: 40px;
+  font-weight: 900;
+  letter-spacing: 3px;
+  color: #282828;
+  width: 520px;
+  text-align: center;
 }
