--- a/src/components/play-detail/play-review-metrials/ReviewForm.scss
+++ b/src/components/play-detail/play-review-metrials/ReviewForm.scss
@@ -1,4 +1,86 @@
-@media (min-width: 480px) {
+@media (min-width: 840px) {
+  .review-form-container {
+    margin: 30px 0 80px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    border: 1px solid rgba(188, 188, 188, 0.5);
+    padding: 10px 30px;
+    display: flex;
+    flex-direction: column;
+
+    .review-title-box {
+      display: flex;
+      align-items: center;
+
+      h3 {
+        margin-right: 30px;
+      }
+    }
+
+    .review-author-box {
+      display: flex;
+      align-items: center;
+
+      h3 {
+        margin-right: 30px;
+      }
+    }
+
+    .review-content-box {
+      display: flex;
+      flex-direction: column;
+
+      div {
+        width: 100%;
+      }
+    }
+
+    .review-rating-box {
+      display: flex;
+      align-items: center;
+
+      h3 {
+        margin-right: 30px;
+      }
+    }
+
+    .reivew-photo-upload-box {
+      .file-upload-btn {
+        position: relative;
+        bottom: 171px;
+        left: 105px;
+      }
+
+      img {
+        position: relative;
+        right: 240px;
+        width: 150px;
+        height: 150px;
+      }
+    }
+
+    .review-guide-text {
+      margin-bottom: 10px;
+
+      p {
+        margin: 10px 0;
+        font-size: 15px;
+      }
+    }
+
+    .play-review-btn {
+      height: 38px;
+      justify-content: flex-end;
+      display: flex;
+      margin: 10px 0 20px;
+      button {
+        margin-left: 30px;
+      }
+    }
+  }
+}
+
+@media (min-width: 590px) and (max-width: 840px) {
   .review-form-container {
     margin-top: 30px;
     background-color: #ffffff;
@@ -7,81 +89,169 @@
     padding: 10px 30px;
     display: flex;
     flex-direction: column;
-  }
 
-  .review-title-box {
-    display: flex;
-    align-items: center;
+    .review-title-box {
+      display: flex;
+      flex-direction: column;
 
-    h3 {
-      margin-right: 30px;
-    }
-  }
+      h3 {
+        margin-right: 30px;
+      }
 
-  .review-author-box {
-    display: flex;
-    align-items: center;
-
-    h3 {
-      margin-right: 30px;
-    }
-  }
-
-  .review-content-box {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .review-content-box textarea {
-    width: 100%;
-    height: 100px;
-  }
-
-  .review-rating-box {
-    display: flex;
-    align-items: center;
-
-    h3 {
-      margin-right: 30px;
-    }
-  }
-
-  .reivew-photo-upload-box {
-    .file-upload-btn {
-      position: relative;
-      bottom: 171px;
-      left: 105px;
+      div {
+        margin-bottom: 10px;
+        width: 100%;
+      }
     }
 
-    img {
-      position: relative;
-      right: 240px;
-      width: 150px;
-      height: 150px;
+    .review-author-box {
+      display: flex;
+      align-items: center;
+
+      h3 {
+        margin-right: 30px;
+      }
     }
-  }
 
-  .review-guide-text {
-    margin-bottom: 10px;
+    .review-content-box {
+      display: flex;
+      flex-direction: column;
 
-    p {
-      margin: 10px 0;
-      font-size: 15px;
+      div {
+        width: 100%;
+      }
     }
-  }
 
-  .play-review-btn {
-    height: 38px;
-    position: relative;
-    bottom: 35px;
-    left: 38%;
-    display: inline;
+    .review-rating-box {
+      display: flex;
+      align-items: center;
 
-    button {
-      margin-left: 30px;
+      h3 {
+        margin-right: 30px;
+      }
+    }
+
+    .reivew-photo-upload-box {
+      .file-upload-btn {
+        position: relative;
+        bottom: 171px;
+        left: 105px;
+      }
+
+      img {
+        position: relative;
+        right: 240px;
+        width: 150px;
+        height: 150px;
+      }
+    }
+
+    .review-guide-text {
+      margin-bottom: 10px;
+
+      p {
+        margin: 10px 0;
+        font-size: 15px;
+      }
+    }
+
+    .play-review-btn {
+      height: 38px;
+      justify-content: flex-end;
+      display: flex;
+      margin: 10px 0 20px;
+      button {
+        margin-left: 30px;
+      }
     }
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 590px) {
+  .review-form-container {
+    margin-top: 30px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    border: 1px solid rgba(188, 188, 188, 0.5);
+    padding: 10px 30px;
+    display: flex;
+    flex-direction: column;
+
+    .review-title-box {
+      display: flex;
+      flex-direction: column;
+
+      h3 {
+        margin-right: 30px;
+      }
+
+      div {
+        margin-bottom: 10px;
+        width: 100%;
+      }
+    }
+
+    .review-author-box {
+      h3 {
+        margin-right: 30px;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+    }
+
+    .review-content-box {
+      display: flex;
+      flex-direction: column;
+
+      div {
+        width: 100%;
+      }
+    }
+
+    .review-rating-box {
+      h3 {
+        margin-right: 30px;
+      }
+
+      div {
+        margin-bottom: 10px;
+      }
+    }
+
+    .reivew-photo-upload-box {
+      img {
+        width: 150px;
+        height: 150px;
+        padding: 20px 0;
+      }
+    }
+
+    .review-guide-text {
+      margin-bottom: 10px;
+
+      p {
+        margin: 10px 0;
+        font-size: 15px;
+      }
+    }
+
+    .play-review-btn {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+
+      button:first-child {
+        margin: 20px 0;
+        width: 70%;
+      }
+
+      button:nth-child(2) {
+        margin-bottom: 30px;
+        width: 70%;
+      }
+    }
+  }
 }
