--- a/src/pages/play-detail/PlayDetail.scss
+++ b/src/pages/play-detail/PlayDetail.scss
@@ -19,6 +19,13 @@ body {
     margin-top: 30px;
     background-color: #fff;
   }
+
+  .get-playInfo-error {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 1129px) {
@@ -36,6 +43,13 @@ body {
     padding: 0 20px 0;
     margin-top: 30px;
     background-color: #fff;
+  }
+
+  .get-playInfo-error {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -55,5 +69,12 @@ body {
     border: 1.5px solid rgba(188, 188, 188, 0.5);
     padding: 0 20px 0;
     background-color: #fff;
+  }
+
+  .get-playInfo-error {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
