FEAT: 메인페이지 슬라이드 구현

--- a/src/components/admin/AdminNav.scss
+++ b/src/components/admin/AdminNav.scss
@@ -60,7 +60,7 @@
     background-color: #eee;
     cursor: pointer;
 }
-.active {
+.admin-nav-box.active {
     background-color: #eee;
     color: #ffb400;
     font-weight: 900;
