--- a/src/components/main/MainBanner.scss
+++ b/src/components/main/MainBanner.scss
@@ -6,12 +6,15 @@
   width: 1110px;
   height: 100%;
 }
-@keyframes tilt {
+@keyframes tiltHover {
   0%, 100% {
     transform: rotate(0deg);
   }
-  40% {
-    transform: rotate(1deg);
+  20% {
+    transform: rotate(-2deg);
+  }
+  65% {
+    transform: rotate(5deg);
   }
 }
 
@@ -19,11 +22,15 @@
   rotate: 2deg;
   width: 240px;
   padding-top: 4px;
-  animation: tilt 1.06s ease; /* 애니메이션 적용 */
+  user-select: none;
+  &:hover {
+    cursor:grabbing;
+    animation: tiltHover 1s ease;
+  }
 }
 @keyframes letterSpacingAnimation {
   from {
-    letter-spacing: 2.5px;
+    letter-spacing: 0px;
   }
   to {
     letter-spacing: 3px;
@@ -31,21 +38,28 @@
 }
 @keyframes gapAnimation {
   from {
-    gap: 8px;
+    gap: 0px;
   }
   to {
-    gap: 8px;
+    gap: 4px;
   }
 }
 .banner-text-box {
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  animation: letterSpacingAnimation 1s ease, gapAnimation 1s ease;
+  gap: 4px;
+  animation: letterSpacingAnimation 2s ease, gapAnimation 2s ease;
   font-size: 40px;
   font-weight: 900;
   letter-spacing: 3px;
   color: #282828;
   width: 520px;
   text-align: center;
+  user-select: none;
+}
+.banner-point-text {
+  margin-left: 4px;
+  font-size: 40px;
+  font-weight: 900;
+  color: #006eff;
 }
