--- a/src/components/main/MainBest.scss
+++ b/src/components/main/MainBest.scss
@@ -1,13 +1,120 @@
-.main-best-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    height: 350px;
-    width: 1110px;
+.main-layout-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main-title-box {
+  display: flex;
+  justify-content: space-between;
+  width: 1190px;
+}
+.slide-info-box {
+  display: flex;
+  align-items: flex-end;
+}
+.slide-info1 {
+  display: inline;
+  font-size: 28px;
+  margin-right: 2px;
+  color: #aaa;
+  user-select: none;
+}
+.slide-info2 {
+  display: inline;
+  font-size: 28px;
+  margin-right: 2px;
+  color: #aaa;
+  user-select: none;
+}
+.slide-info3 {
+  display: inline;
+  font-size: 28px;
+  margin-right: 12px;
+  color: #aaa;
+  user-select: none;
+}
+.slide-info1.active,
+.slide-info2.active,
+.slide-info3.active {
+  font-weight: 900;
+  color: #FFB400;
+}
+.main-slide-container {
+  display: flex;
+  align-items: center;
+}
+.slide-left-icon {
+  color: #bbb;
+}
+.slide-right-icon {
+  margin-left: 10px;
+  color: #bbb;
+}
+.slide-left-icon:hover,
+.slide-right-icon:hover {
+  cursor: pointer;
+  color: white;
+  transform: scale(1.2);
+  transition: transform 0.1s ease;
+}
+.main-play-container {
+  display: flex;
+  align-items: flex-end;
+  height: 340px;
+  width: 1190px;
+  overflow: hidden;
+}
+.main-play-img-box {
+  position: relative;
+
+  .best-overlay-rank {
+    position: absolute;
+    top: 90%; // 중앙 정렬
+    left: 18%;
+    transform: translate(-50%, -50%); // 정확히 중앙에 위치시키기
+    color: white; // 텍스트 색상
+    font-size: 60px; // 텍스트 크기
+    font-weight: 900;
+    text-align: center; // 텍스트 가운데 정렬
   }
-  .main-title {
-      color: white;
-      margin-bottom: 10px;
-      font-size: 27px;
+}
+.main-title {
+  color: white;
+  margin: 0 0 16px 0 !important;
+}
+.main-play-box {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.main-play-box:hover {
+  cursor: pointer;
+}
+.main-play-img-box {
+  height: 250px;
+  width: 180px;
+  border: 0.5px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
-  
+}
+.main-play-title {
+  color: #eee;
+  margin: 16px 0 4px 0;
+  font-size: 18px;
+  font-weight: 300;
+}
+.main-play-period {
+  color: #bbb;
+  font-size: 12px;
+  margin: 0px;
+}
