--- a/src/components/main/MainPreferredRegion.scss
+++ b/src/components/main/MainPreferredRegion.scss
@@ -1,12 +1,81 @@
-.main-region-container {
+.main-layout-container {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  height: 350px;
-  width: 1110px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .main-title {
   color: white;
-  margin-bottom: 10px;
-  font-size: 27px;
+  margin: 0 0 16px 0 !important;
+}
+.region-list-container {
+  width: 1180px;
+}
+.region-list-box {
+  display: flex;
+  align-items: flex-end;
+  height: 50px;
+  gap: 12px;
+}
+.region-list {
+  display: flex;
+  align-items: center;
+  height: 32px;
+  padding: 0px 12px;
+  font-size: 16px;
+  color: white;
+  background-color: #282828;
+  border-radius: 16px;
+}
+.region-list:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: transform 0.1s ease;
+}
+.region-list.selected {
+  transform: scale(1.1);
+  background-color: #eee;
+  font-weight: 700;
+  color: black;
+  transition: transform 0.1s ease, background-color 0.2s ease;
+}
+.main-region-container {
+  display: flex;
+  gap: 20px;
+}
+.main-play-box {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.main-play-box:hover {
+  cursor: pointer;
+}
+.main-play-img-box {
+  height: 250px;
+  width: 180px;
+  border: 0.5px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+}
+.main-play-title {
+  color: #eee;
+  margin: 16px 0 4px 0;
+  font-size: 18px;
+  font-weight: 300;
+}
+.main-region-play-period {
+  color: #00aaff;
+  font-size: 13px;
+  font-weight: 600;
+  margin: 0px;
 }
