--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     height: 500px;
     background-color: #202020;
 }
@@ -23,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 500px;
+    height: 550px;
     background-color: #282828;
 }
 .publicity-container {
@@ -43,7 +43,6 @@
     justify-content: center;
     height: 500px;
     background: linear-gradient(to bottom, #202020 90%, #282828 10%);
-    border-top: solid 1px black;
 }
 .child-container {  
     display: flex;
@@ -51,5 +50,14 @@
     align-items: center;
     justify-content: space-around;
     height: 500px;
+    padding-bottom: 20px;
     background-color: #282828;
+}
+.theater-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 600px;
+    background-color: #202020;
 }
